# bds

./: README.md  plan.md  pyproject.toml  registry.json
.github/workflows/: publish.yml
scripts/itemStackParser/: itemStackParser.js
src/: __init__.py  main.py
src/commands/: add.py  init.py  list.py
src/scripts/inventorySaveLoader/: inventorysaveloader.js
src/scripts/jumpDetector/: jumpdetector.js
