[project]
name = "bds-cli"
version = "0.1.0"
description = "CLI tool for managing Minecraft Bedrock scripting projects"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests>=2.32.5",
    "click>=8.1.0",
    "InquirerPy>=0.3.4",
]

[project.scripts]
bds-cli = "src.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
